--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  max-width: 100vw;
   min-height: 100vh;
+  padding: 25px 25px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left{
+  width: 25vw;
+  margin-right: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+.title{
+  font-size: 50px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  background: none;
+  background: #673ab7;
+  border: 2px solid transparent;
+  outline: none;
+  margin: 25px 0px;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-family: 'Raleway', sans-serif;
+  cursor: pointer;
+  font-size: 1em;
+  transition: all 250ms ease-out;
+}
+
+.card-grid{
+  width: 60vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.turns{
+  font-size: 30px;
+  margin-top: 10px;
 }
